--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="Tyt_qiYoXXEX65J5XzkeO3IdUtn6k_fBCMYbUqTZZzo" />
     <title>portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
